include_directories( $ENV{LIBWDA_FQ_DIR}/include )
include_directories( $ENV{IFDH_ART_INC} )
include_directories( $ENV{IFDHC_FQ_DIR}/inc )
include_directories( $ENV{IFBEAM_FQ_DIR}/include )

cet_find_library( WDALIB NAMES wda PATHS ENV LIBWDA_LIB NO_DEFAULT_PATH )
cet_find_library( IFBEAMSERVICE NAMES IFBeam_service PATHS ENV IFDH_ART_LIB NO_DEFAULT_PATH )
cet_find_library( IFBEAM NAMES ifbeam PATHS ENV IFBEAM_LIB   NO_DEFAULT_PATH )


install_headers()
install_fhicl()
install_source()
install_scripts()
add_subdirectory(Exe)
add_subdirectory(NearlineMonitor)
add_subdirectory(RawDecoding)
add_subdirectory(CRT)
add_subdirectory(CTB)
add_subdirectory(Tool)
add_subdirectory(fcl)
add_subdirectory(DetectorServices)
add_subdirectory(BeamEvent)
add_subdirectory(T0Reco)
add_subdirectory(dEdxcalibration)

